# pywisard

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: BloomFilter.py  Discriminator.py  Node.py  Wisard.py  transfer_hard.py  transfer_soft.py  utils.py
src/attacks/: config.py  main.py  models.py  trainer.py
src/pywisard/: BloomFilter.py  Discriminator.py  Node.py  Wisard.py  l2attack.py  transfer_hard.py  transfer_soft.py  utils.py
src/pywisard/attacks/: config.py  main.py  trainer.py  utils.py
src/pywisard/attacks/clean/: main.py
src/pywisard/attacks/directed/: main.py  utils.py
src/pywisard/attacks/random/: main.py
src/pywisard/attacks/transfer/: main.py  trainer.py
