[project]
name = "pywisard"
version = "0.1.0"
description = "WiSARD implementation in Python"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.2.1",
    "torchvision==0.20.1",
    "matplotlib==3.10.1",
    "foolbox==3.3.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pywisard"]
